Menu update career to ispect in /404/, /blogg/, /dokument/, /ispect/, /karriar/, /kontakt/, /nyheter/, /om_oss/, /projekt/, /skanska/

--- a/404/index.html
+++ b/404/index.html
@@ -45,19 +45,19 @@
     <link href="../css/slides.css" rel="stylesheet" type="text/css" />
     <!-- Google Tag Manager -->
     <script>
-      ;(function (w, d, s, l, i) {
-        w[l] = w[l] || []
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
         w[l].push({
-          'gtm.start': new Date().getTime(),
-          event: 'gtm.js',
-        })
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js",
+        });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : ''
-        j.async = true
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-        f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-MXG3P8L')
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-MXG3P8L");
     </script>
     <!-- End Google Tag Manager -->
     <!-- google site verification -->
@@ -67,56 +67,56 @@
     />
     <!-- Hotjar Tracking Code for www.besiktningsman.se -->
     <script>
-      ;(function (h, o, t, j, a, r) {
+      (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
           function () {
-            ;(h.hj.q = h.hj.q || []).push(arguments)
-          }
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
         h._hjSettings = {
           hjid: 754022,
           hjsv: 6,
-        }
-        a = o.getElementsByTagName('head')[0]
-        r = o.createElement('script')
-        r.async = 1
-        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv
-        a.appendChild(r)
-      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=')
+        };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
     <!-- Facebook Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return
+        if (f.fbq) return;
         n = f.fbq = function () {
           n.callMethod
             ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments)
-        }
-        if (!f._fbq) f._fbq = n
-        n.push = n
-        n.loaded = !0
-        n.version = '2.0'
-        n.queue = []
-        t = b.createElement(e)
-        t.async = !0
-        t.src = v
-        s = b.getElementsByTagName(e)[0]
-        s.parentNode.insertBefore(t, s)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
       })(
         window,
         document,
-        'script',
-        'https://connect.facebook.net/en_US/fbevents.js'
-      )
-      fbq('init', '1747503458639948')
-      fbq('track', 'PageView')
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "1747503458639948");
+      fbq("track", "PageView");
     </script>
     <noscript
       ><img
         height="1"
         width="1"
-        style="display: none;"
+        style="display: none"
         src="https://www.facebook.com/tr?id=1747503458639948&ev=PageView&noscript=1"
     /></noscript>
     <!-- animation library -->
@@ -128,7 +128,7 @@
   </head>
   <body class="slides scroll simplifiedMobile animated">
     <!-- SVG Library -->
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
       <symbol id="close" viewBox="0 0 30 30">
         <path
           d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"
@@ -211,14 +211,14 @@
             <img
               src="../assets/svg/bm_logo_top.svg"
               alt="Besiktningsman.se"
-              style="width: 200px;"
+              style="width: 200px"
             />
           </a>
         </div>
         <div class="right">
           <ul class="menu crop small bold">
             <li><a href="../#tjanster">Tjänster</a></li>
-            <li><a href="../karriar/">Karriär</a></li>
+            <li><a href="https://ispect.se/">iSpect</a></li>
             <li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
           </ul>
         </div>
@@ -229,7 +229,7 @@
             ><img
               src="../assets/svg/bm_logo.svg"
               alt="Besiktningsman.se"
-              style="width: 200px;"
+              style="width: 200px"
           /></a>
         </div>
         <div class="right">
@@ -263,7 +263,7 @@
           <li><a href="../kontakt/">Kontakta oss</a></li>
           <br />
           <br />
-          <li><a href="../karriar/">Karriär</a></li>
+          <li><a href="https://ispect.se/">iSpect</a></li>
           <br />
           <br />
           <li><a href="../om_oss/">Om oss</a></li>
@@ -286,7 +286,7 @@
     <section
       id="intro"
       class="slide whiteSlide"
-      style="background-color: #f6f9fc !important;"
+      style="background-color: #f6f9fc !important"
     >
       <div class="content disable-pointer-events">
         <div class="container">
@@ -310,111 +310,111 @@
     <script>
       //Home Page Graphic
       //Handles Window Resize
-      $(window).on('resize', function () {
-        resizeCanvas()
-      })
+      $(window).on("resize", function () {
+        resizeCanvas();
+      });
 
       //adapted from https://bl.ocks.org/mbostock/3231307
-      var width = d3.select('#cover').node().clientWidth,
-        height = d3.select('#intro').node().clientHeight
+      var width = d3.select("#cover").node().clientWidth,
+        height = d3.select("#intro").node().clientHeight;
 
       var nodes = d3.range(200).map(function () {
-          return { radius: Math.random() * 20 + 2 }
+          return { radius: Math.random() * 20 + 2 };
         }),
         root = nodes[0],
-        color = ['#6D92A3', '#1072BB', '#2F2D2E']
+        color = ["#6D92A3", "#1072BB", "#2F2D2E"];
 
-      root.radius = 0
-      root.fixed = true
-      root.px = width / 2
-      root.py = height / 2
+      root.radius = 0;
+      root.fixed = true;
+      root.px = width / 2;
+      root.py = height / 2;
 
       var force = d3.layout
         .force()
         .gravity(0.005)
         .charge(function (d, i) {
-          return i ? 0 : -400
+          return i ? 0 : -400;
         })
         .nodes(nodes)
-        .size([width, height])
+        .size([width, height]);
 
-      force.start()
+      force.start();
 
       var canvas = d3
-        .select('#cover')
-        .append('canvas')
-        .attr('width', width)
-        .attr('height', height)
+        .select("#cover")
+        .append("canvas")
+        .attr("width", width)
+        .attr("height", height);
 
-      var context = canvas.node().getContext('2d')
+      var context = canvas.node().getContext("2d");
 
-      force.on('tick', function (e) {
+      force.on("tick", function (e) {
         var q = d3.geom.quadtree(nodes),
           i,
           d,
-          n = nodes.length
+          n = nodes.length;
 
-        for (i = 1; i < n; ++i) q.visit(collide(nodes[i]))
+        for (i = 1; i < n; ++i) q.visit(collide(nodes[i]));
 
-        context.clearRect(0, 0, width, height)
-        force.size([width, height])
+        context.clearRect(0, 0, width, height);
+        force.size([width, height]);
         for (i = 1; i < n; ++i) {
-          context.fillStyle = color[i % color.length]
-          d = nodes[i]
-          context.moveTo(d.x, d.y)
-          context.beginPath()
-          context.arc(d.x, d.y, d.radius, 0, 2 * Math.PI)
-          context.fill()
+          context.fillStyle = color[i % color.length];
+          d = nodes[i];
+          context.moveTo(d.x, d.y);
+          context.beginPath();
+          context.arc(d.x, d.y, d.radius, 0, 2 * Math.PI);
+          context.fill();
         }
-      })
+      });
 
-      canvas.on('mousemove', function () {
-        var p1 = d3.mouse(this)
-        root.px = p1[0]
-        root.py = p1[1]
-        force.resume()
-      })
+      canvas.on("mousemove", function () {
+        var p1 = d3.mouse(this);
+        root.px = p1[0];
+        root.py = p1[1];
+        force.resume();
+      });
 
       function collide(node) {
         var r = node.radius + 160,
           nx1 = node.x - r,
           nx2 = node.x + r,
           ny1 = node.y - r,
-          ny2 = node.y + r
+          ny2 = node.y + r;
 
         return function (quad, x1, y1, x2, y2) {
           if (quad.point && quad.point !== node) {
             var x = node.x - quad.point.x,
               y = node.y - quad.point.y,
               l = Math.sqrt(x * x + y * y),
-              r = node.radius + quad.point.radius + 10
+              r = node.radius + quad.point.radius + 10;
             if (l < r) {
-              l = ((l - r) / l) * 0.5
-              node.x -= x *= l
-              node.y -= y *= l
-              quad.point.x += x
-              quad.point.y += y
+              l = ((l - r) / l) * 0.5;
+              node.x -= x *= l;
+              node.y -= y *= l;
+              quad.point.x += x;
+              quad.point.y += y;
             }
             //Prevent circles in center
-            ;(xCenter = node.x - width / 2),
+            (xCenter = node.x - width / 2),
               (yCenter = node.y - height / 2),
               (lCenter = Math.sqrt(xCenter * xCenter + yCenter * yCenter)),
-              (rCenter = node.radius + 200)
+              (rCenter = node.radius + 200);
             if (lCenter < rCenter) {
-              lCenter = ((lCenter - rCenter) / lCenter) * 0.5
-              node.x -= xCenter *= lCenter
-              node.y -= yCenter *= lCenter
+              lCenter = ((lCenter - rCenter) / lCenter) * 0.5;
+              node.x -= xCenter *= lCenter;
+              node.y -= yCenter *= lCenter;
             }
           }
-          return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1
-        }
+          return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+        };
       }
 
       //Makes Canvas fit entire screen
       function resizeCanvas() {
-        width = d3.select('#cover').node().clientWidth
-        canvas.attr('width', width).attr('height', height)
-        force.tick()
+        width = d3.select("#cover").node().clientWidth;
+        canvas.attr("width", width).attr("height", height);
+        force.tick();
       }
     </script>
   </body>
