--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -172,7 +172,7 @@
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li><a href="../#tjanster">Tjänster</a></li>
-					<li><a href="../karriar/">Karriär</a></li>
+					<li><a href="https://ispect.se/">iSpect</a></li>
 					<li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
@@ -199,7 +199,7 @@
 				<li><a href="../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="../karriar/">Karriär</a></li>
+				<li><a href="https://ispect.se/">iSpect</a></li>
 				<br>
 				<br>
 				<li><a href="../om_oss/">Om oss</a></li>
