Side menu update career to ispect

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -212,7 +212,7 @@
 				<li><a href="../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="../karriar/">Karriär</a></li>
+				<li><a href="https://ispect.se">Karriär</a></li>
 				<br>
 				<br>
 				<li><a href="../om_oss/">Om oss</a></li>
