--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="right">
                 <ul class="menu crop small bold">
                     <li><a href="#tjanster">Tjänster</a></li>
-                    <li><a href="https://ispect.se/">iSpect</a></li>
+                    <li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
                     <li><a href="kontakt/" class="text-blue">Kontakta oss</a></li>
                 </ul>
             </div>
@@ -239,7 +239,7 @@
                 <li><a href="kontakt/">Kontakta oss</a></li>
                 <br>
                 <br>
-                <li><a href="https://ispect.se/">iSpect</a></li>
+                <li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
                 <br>
                 <br>
                 <li><a href="om_oss/">Om oss</a></li>
@@ -278,7 +278,7 @@
                         <p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
                         <ul>
                             <li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
-                            <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
+                            <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
                             <li><a href="konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
