--- a/tjanster/entreprenad/slutbesiktning/index.html
+++ b/tjanster/entreprenad/slutbesiktning/index.html
@@ -209,7 +209,7 @@ Då ska du boka din slutbesiktning hos oss. " />
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li><a href="../../../#tjanster">Tjänster</a></li>
-					<li><a href="https://ispect.se/">iSpect</a></li>
+					<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
 					<li><a href="../../../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
@@ -239,7 +239,7 @@ Då ska du boka din slutbesiktning hos oss. " />
 				<li><a href="../../../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="https://ispect.se/">iSpect</a></li>
+				<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
 				<br>
 				<br>
 				<li><a href="../../../om_oss/">Om oss</a></li>
