--- a/tjanster/brf/statusbesiktning/bekraftelse/index.html
+++ b/tjanster/brf/statusbesiktning/bekraftelse/index.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="right">
 				<ul class="menu crop small bold">
 					<li><a href="../../../../../#tjanster">Tjänster</a></li>
-					<li><a href="https://ispect.se/">iSpect</a></li>
+					<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
 					<li><a href="../../../../../kontakt/" class="text-blue">Kontakta oss</a></li>
 				</ul>
 			</div>
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li><a href="../../../../../kontakt/">Kontakta oss</a></li>
 				<br>
 				<br>
-				<li><a href="https://ispect.se/">iSpect</a></li>
+				<li><a href="https://ispect.se/" target="_blank">iSpect</a></li>
 				<br>
 				<br>
 				<li><a href="../../../../../om_oss/">Om oss</a></li>
