consult ispect links fix

--- a/konsultation/index.html
+++ b/konsultation/index.html
@@ -246,7 +246,7 @@ window.BOKAMERA = {
 				<div class="right">
 					<ul class="menu crop small bold">
 						<li><a href="../#tjanster">Tjänster</a></li>
-						<li><a href="https://ispect.se">iSpect</a></li>
+						<li><a href="https://ispect.se" target="_blank">iSpect</a></li>
 						<li><a href="../kontakt/" class="text-blue">Kontakta oss</a></li>
 					</ul>
 				</div>
@@ -291,7 +291,7 @@ window.BOKAMERA = {
 					<li><a href="../kontakt/">Kontakta oss</a></li>
 					<br />
 					<br />
-					<li><a href="https://ispect.se">Karriär</a></li>
+					<li><a href="https://ispect.se" target="_blank">iSpect</a></li>
 					<br />
 					<br />
 					<li><a href="../om_oss/">Om oss</a></li>
@@ -465,7 +465,7 @@ window.BOKAMERA = {
 			style="background: #f6f9fc"
 		>
 			<div
-				class="container-lg margin-bottom-5 toCenter center"
+				class="container-lg margin-bottom-10 toCenter center"
 				style="margin-top: 5rem"
 			>
 				<h3
@@ -481,9 +481,10 @@ window.BOKAMERA = {
 					<br>
 					vill vi stötta de som sitter i karantän med 40%
 					avdrag på alla våra rådgivningstjänster. <br> <b>Använd kod: KARANTAN40</b>
-				</span> -->
+        </span> -->
+        <div id="bokamera-embedded"></div>
 			</div>
-<div id="bokamera-embedded"></div>
+
 
 		</section>
 			<!-- Footer -->
