landing page bricked somehow, swapped to old one and updated it

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <ul>
                             <li><a href="#entreprenad" class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
                             <li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">BRF</a></li>
-                            <li><a href="konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
+                            <li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
                         </ul>
                         <a href="tel:0101654000" id="mobilePhoneNumber">
                             <p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 - 17:00
@@ -326,7 +326,7 @@
                                         <p>Tillgång till byggfelsstatistik.</p>
                                     </li>
                                 </ul>
-                                <a href="ispect/" class="common-BodyText">
+                                <a href="https://ispect.se/" target="_blank" class="common-BodyText">
                                     <p class="margin-bottom-2 common-Link">
                                         Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
                                     </p>
@@ -335,106 +335,6 @@
                                     <!-- typeform button -->
                                     <p class="common-BodyTitle2">Intresserad? Kontakta oss för att komma igång.</p>
                                     <a class="common-Button blue text-white margin-bottom-2" href="tjanster/entreprenad/#boka">
-		<div class="content">
-
-			<ul class="mainMenu center margin-top-1">
-				<li><a href="#tjanster">Tjänster</a></li>
-				<br>
-				<br>
-				<li><a href="kontakt/">Kontakta oss</a></li>
-				<br>
-				<br>
-				<li><a href="karriar/">Karriär</a></li>
-				<br>
-				<br>
-				<li><a href="om_oss/">Om oss</a></li>
-				<br>
-				<br>
-				<li><a href="nyheter/">Nyheter</a></li>
-				<br>
-				<br>
-				<li><a href="dokument/">Dokument</a></li>
-				<br>
-				<br>
-				<li><a href="tel:0101654000">Telefon: 010-165 40 00</a></li>
-			</ul>
-
-		</div>
-	</nav>
-
-	<!-- HEADER -->
-	<section class="slide fade autoHeight" data-name="home" id="mainLanding">
-		<div class="content">
-			<div class="container" style="height: 560px;">
-				<div class="wrap">
-
-					<div class="fix-10-12" style="padding-top: 5%;">
-						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="main-Logo">
-						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<ul>
-							<li><a href="#entreprenad"
-									class="common-Button text-blue fromCenter margin-bottom-1">ENTREPRENAD</a></li>
-							<li><a href="#brf" class="common-Button text-blue fromCenter margin-bottom-1">brf</a></li>
-							<li><a href="/konsultation/" class="common-Button text-blue fromCenter margin-bottom-1">Rådgivning</a></li>
-						</ul>
-						<a href="tel:0101654000" id="mobilePhoneNumber">
-							<p class="common-BodyText text-white margin-0">Vår växel är öppen vardagar mellan 08:30 -
-								17:00</p>
-							<p class="common-Link text-white margin-0">Ring 010-165 40 00</p>
-						</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-		<div class="background"
-			style="background-image:url(assets/img/backgrounds/summer/sodermalm_summer.jpg);min-height: 80vh;"
-			alt="Foto av Södermälarstrand, Södermalm, Stockholm"></div>
-	</section>
-	<!-- ENTERPRISE START -->
-	<section class="slide whiteSlide fromLeft autoHeight" id="enterprise">
-		<div class="content">
-			<div class="container">
-				<div class="wrap">
-
-					<div class="fix-12-12">
-						<ul class="flex reverse flex-phone">
-							<li class="col-6-12 left fromLeft cell-32">
-								<h1 class="common-IntroText">Entreprenadbesiktning som ökar lönsamheten.</h1>
-								<h2 class="common-BodyTitle">Besiktningsman.se erbjuder digitaliserad
-									entreprenadbesiktning över hela landet.</h2>
-								<ul>
-									<li>
-										<p>Det ger er:</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p>Sänkta kostnader i produktion och eftermarknad.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel
-											<br>på avtalad dag.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p>Lättillgänglig dokumentation i vår portal.</p>
-									</li>
-									<li>
-										<div class="checkmark"></div>
-										<p>Tillgång till byggfelsstatistik.</p>
-									</li>
-								</ul>
-								<a href="ispect/" class="common-BodyText">
-									<p class="margin-bottom-2 common-Link">
-										Mer om digitaliserad entreprenadbesiktning <i class="icono-arrow2-left"></i>
-									</p>
-								</a>
-								<div class="section-Links">
-									<!-- typeform button -->
-									<p class="common-BodyTitle2">Intresserad? Kontakta oss för att komma igång.</p>
-									<a class="common-Button blue text-white margin-bottom-2"
-										href="tjanster/entreprenad/#boka">
 										kontakta oss
 									</a>
                                     <a href="tel:0101654000">
