Commented out all "karriär" in the footer (on all pages)

--- a/projekt/index.html
+++ b/projekt/index.html
@@ -262,7 +262,7 @@
 									<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 								</a>
 								<a href="../karriar/">
-									<p class="text-blue">Karriär</p>
+									<!-- <p class="text-blue">Karriär</p> -->
 								</a>
 								<a href="tel:0101654000">
 									<p class="text-blue">Ring oss: 010-165 40 00</p>
