--- a/dokument/index.html
+++ b/dokument/index.html
@@ -960,7 +960,7 @@ BFS 2011:6med ändringar till och med BFS 2015:3, BBR."
 										<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 									</a>
 									<a href="../karriar/">
-										<p class="text-blue">Karriär</p>
+										<!-- <p class="text-blue">Karriär</p> -->
 									</a>
 									<a href="tel:0101654000">
 										<p class="text-blue">Ring oss: 010-165 40 00</p>
