--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                                         <p class="text-blue">iSpect - Digital Besiktningsprocess</p>
                                     </a>
                                     <a href="karriar/">
-                                        <p class="text-blue">Karriär</p>
+                                        <!-- <p class="text-blue">Karriär</p> -->
                                     </a>
                                     <a href="tel:0101654000">
                                         <p class="text-blue">Ring oss: 010-165 40 00</p>
