--- a/tjanster/brf/statusbesiktning/bekraftelse/index.html
+++ b/tjanster/brf/statusbesiktning/bekraftelse/index.html
@@ -245,7 +245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 									<p class="common-Link">iSpect - Digital Besiktningsprocess</p>
 								</a>
 								<a href="../../../../../../karriar/">
-									<p class="text-blue">Karriär</p>
+									<!-- <p class="text-blue">Karriär</p> -->
 								</a>
 								<a href="tel:0101654000">
 									<p class="text-blue">Ring oss: 010-165 40 00</p>
