Changed the Meta tags

--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -10,13 +10,13 @@
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description"
-		content="OVK - För ett bra inomhusklimat." />
+		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title"
-		content="OVK - För ett bra inomhusklimat." />
+		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
 	<meta property="og:description"
 		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/teknisk_underhallsplan" />
@@ -307,7 +307,7 @@
 			</div>
 		</div>
 	</section>
-	<!-- OVK why -->
+	<!-- Teknisk underhållsplan why -->
 	<section class="slide whiteSlide autoHeight" id="ovkIntro">
 		<div class="container">
 			<div class="container-lg">
