--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -321,7 +321,7 @@
 										bostadsrättsförening</h3>
 									<p class="common-BodyText">
 										Syftet med en underhållsplan är att bostadsrättsföreningen ska vara förberedd inför <br> framtida underhållsbehov och de kostnader de medför. <br><br>
-										Underhållsplanen gör det även enklare att sprida ut kostnaderna för underhållet på en längre period - vilket leder till en jämnare, och ofta en lägre boendekostnad för medlemmarna.
+										Underhållsplanen gör det även enklare att sprida ut kostnaderna för underhållet över en längre period - vilket leder till en jämnare, och ofta en lägre boendekostnad för medlemmarna.
 									</p>
 								<li class="col-6-12 bottom margin-bottom-3">
 									<img src="../../../assets/img/backgrounds/Balcony.png"
