Modified all text in on the page

--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -333,10 +333,9 @@
 									<h3 class="common-BodyTitle">Varför behövs en 
 										underhållsplan?</h3>
 									<p class="common-BodyText">
-										Med hjälp utav en underhållsplan kan ni proaktivt jobba med underhåll av fastigheten, och undvika dyra konsekvenser.
+										Med hjälp utav en underhållsplan kan man jobba med proaktivt underhåll av fastigheten, vilket leder till en lägre förvaltningskostnad
 										<br><br>
-										Konsekvenser som att exempelvis upptäcka att ventilationssystemet sedan länge varit i behov av underhåll - en sen upptäckt som 
-kan resultera i stora kostnader för mögelsanering och renovering. 
+										Ett exempel på proaktivt underhåll är att vid besiktning upptäcka att ventilationssystemet sedan länge varit i behov av underhåll. Om det här upptäcks i ett sent skede kan det resultera i stora kostnader för mögelsanering och renovering.  
 									</p>
 								<li class="col-6-12 bottom margin-bottom-3">
 									<img src="../../../assets/img/backgrounds/iphone.png"
@@ -432,7 +431,7 @@ kan resultera i stora kostnader för mögelsanering och renovering.
 						<br>
 						Våra välutbildade medarbetare har gedigen bakgrund från byggsektorn och besiktningsarbete.
 						<br>
-						Vårt fokus är att bemöta höga kundkrav på stabilt och sakkunnigt utförande.
+						Vårt fokus är att bemöta höga kundkrav på ett professionellt och sakkunnigt sätt.
 					</p>
 					<ul class="flex left">
 						<li class="col-6-12 fromBottomLeft">
@@ -440,8 +439,7 @@ kan resultera i stora kostnader för mögelsanering och renovering.
 								iSpect.</h3>
 							<p class="common-BodyText">
 								Det betyder att vi utför besiktningar digitalt med iSpect runtom i Sverige.
-								I iSpect:s feldatabas har vi trehundra tusen av de vanligaste förekommande felen vid
-								nyproduktion och rot.
+								iSpect innehåller hundratusentals utav de vanligaste förekommande felen vid nyproduktion och rot, vilket gör det möjligt för oss att erbjuda statistik till alla våra kunder.
 							</p>
 						<li class="col-6-12 bottom">
 							<img src="../../../assets/img/ispect/bm_inspector_worker.jpg"
@@ -452,12 +450,9 @@ kan resultera i stora kostnader för mögelsanering och renovering.
 				<div class="fix-10-12 margin-bottom-5">
 					<ul class="flex left">
 						<li class="col-6-12 fromBottomLeft">
-							<h3 class="common-BodyTitle">När våra besiktningsmän utför en besiktning av ett byggmoment
-								så kommer den utföras med hjälp av iSpect.</h3>
+							<h3 class="common-BodyTitle">När våra besiktningsmän besiktigar ett byggmoment så använder de alltid iSpect.</h3>
 							<p class="common-BodyText">
-								Direkt efter att besiktningen utförts får ni en komplett felbilaga i iSpectportal, samt
-								status på det byggnadstekniska skicket av fastigheten.
-								Därmed kan ni påbörja er planering med besiktningsutlåtandet som utgångspunkt.
+								Direkt efter att besiktningen utförts får ni en komplett felbilaga i iSpect, samt status på det byggnadstekniska skicket av fastigheten. Därmed kan ni påbörja er planering med besiktningsutlåtandet som utgångspunkt.
 							</p>
 						<li class="col-6-12 bottom">
 							<img src="../../../assets/img/ispect/bm_inspector_withipad.jpg"
