Added a button that leads to the page "teknisk underhållsplan"

--- a/tjanster/brf/index.html
+++ b/tjanster/brf/index.html
@@ -765,6 +765,10 @@
 
 						<!-- övriga tjänster -->
 						<h2 class="common-BodyTitle">Övriga tjänster</h2>
+						<a href="../brf/Teknisk_underhallsplan/" class="common-Button text-blue" style="">
+							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
+							Teknisk Underhållsplan
+						</a>
 						<a href="../brf/OVK_besiktning/" class="common-Button text-blue" style="">
 							<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>
 							OVK - Obligatorisk ventilationskontroll
