minor fixes for TU landing

--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -309,23 +309,23 @@
 	</section>
 	<!-- Teknisk underhållsplan why -->
 	<section class="slide whiteSlide autoHeight" id="ovkIntro">
-		<div class="container">
+
 			<div class="container-lg">
-				<div class="fix-10-12 margin-top-1" style="margin-bottom: 5%;">
+				<div class="margin-top-1" style="margin-bottom: 5%;">
 
 					<div class="col-5-12">
 						<div class="center">
 							<ul class="flex left">
 								<li class="col-6-12 fromBottomLeft">
-									<h3 class="common-BodyTitle">Grunden till en sund 
-										bostadsrättsförening</h3>
+									<h2 class="common-BodyTitle">Grunden till en sund 
+										bostadsrättsförening</h2>
 									<p class="common-BodyText">
 										Syftet med en underhållsplan är att bostadsrättsföreningen ska vara förberedd inför <br> framtida underhållsbehov och de kostnader de medför. <br><br>
 										Underhållsplanen gör det även enklare att sprida ut kostnaderna för underhållet över en längre period - vilket leder till en jämnare, och ofta en lägre boendekostnad för medlemmarna.
 									</p>
 								<li class="col-6-12 bottom margin-bottom-3">
 									<img src="../../../assets/img/backgrounds/Balcony.png"
-										class="soft-shadow img-border-radius" alt="Foto av en glad familj" />
+										class="soft-shadow img-border-radius" style="width: 100%;" alt="Foto av en glad familj" />
 								</li>
 							</ul>
 							<ul class="flex left">
@@ -339,12 +339,12 @@
 									</p>
 								<li class="col-6-12 bottom margin-bottom-3">
 									<img src="../../../assets/img/backgrounds/iphone.png"
-										class="soft-shadow img-border-radius" alt="Foto av en person som knappar in ett tal i en miniräknare" />
+										class="soft-shadow img-border-radius" style="width: 100%;" alt="Foto av en person som knappar in ett tal i en miniräknare" />
 								</li>
 							</ul>
 							<ul class="flex left">
 								<li class="col-6-12 fromBottomLeft">
-									<h3 class="common-BodyTitle">Vad är en bra underhållsplan?</h3>
+									<h4 class="common-BodyTitle">Vad är en bra underhållsplan?</h4>
 									<p class="common-BodyText">
 										En som utgör grunden till god förvaltning av bostadsrättsföreningens fastigheter.
 										<br><br>
@@ -354,7 +354,7 @@
 									</p>
 								<li class="col-6-12 bottom margin-bottom-3">
 									<img src="../../../assets/img/backgrounds/contract.png"
-										class="soft-shadow img-border-radius" alt="Foto av en person som knappar in ett tal i en miniräknare" />
+										class="soft-shadow img-border-radius" style="width: 100%;" alt="Foto av en person som knappar in ett tal i en miniräknare" />
 								</li>
 							</ul>
 						</div>
@@ -362,7 +362,7 @@
 
 				</div>
 			</div>
-		</div>
+
 	</section>
 	<!-- OVK booking -->
 	<section class="slide form-section white" data-name="boka" name="boka" data-title="boka" id="boka">
