Changed file name from underhållsplan.jpg -> underhallsplan.jpg.

--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -272,7 +272,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../../../assets/img/backgrounds/underhållsplan.jpg)"
+		<div class="background" style="background-image:url(../../../assets/img/backgrounds/underhallsplan.jpg)"
 			alt="Foto av ett snöigt innerstockholm"></div>
 	</section>
 	<!-- GB customers -->
