Changed from small to capital letter

--- a/tjanster/brf/Teknisk_underhallsplan/index.html
+++ b/tjanster/brf/Teknisk_underhallsplan/index.html
@@ -10,22 +10,22 @@
 	<link rel="shortcut icon" href="../../../favicon.ico">
 	<!-- Making the website social media friendly-->
 	<meta name="description"
-		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
+		content="Teknisk Underhållsplan - Grunden till en sund bostadsrättsförening." />
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="https://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title"
-		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
+		content="Teknisk Underhållsplan - Grunden till en sund bostadsrättsförening." />
 	<meta property="og:description"
 		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
 	<meta property="og:url" content="https://www.besiktningsman.se/tjanster/brf/teknisk_underhallsplan" />
 	<meta property="og:site_name" content="https://www.besiktningsman.se">
 	<meta property="og:image" content="../../../assets/img/backgrounds/og_image.png" />
 	<meta name="twitter:title"
-		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
+		content="Teknisk Underhållsplan - Grunden till en sund bostadsrättsförening." />
 	<meta name="twitter:description"
-		content="Teknisk Underhållsplan - grunden till en sund bostadsrättsförening." />
+		content="Teknisk Underhållsplan - Grunden till en sund bostadsrättsförening." />
 	<meta name="twitter:card" content="summary" />
 	<!-- Fonts and Material Icons -->
 	<link
