Removed: Patrik Svensson Heval Remazan Mikael Sättberger
Added:
Patrik Johansen

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -577,13 +577,6 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Heval Remazan</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:heval.remazan@besiktningsman.se">
-										<p class="common-Link">heval.remazan@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
 									<h3>Jeanette Immo</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:jeanette@besiktningsman.se">
@@ -633,13 +626,6 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Mikael Sättberger</h3>
-									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:mikael.sattberger@besiktningsman.se">
-										<p class="common-Link">mikael.sattberger@besiktningsman.se</p>
-									</a>
-								</li>
-								<li class="col-3-12">
 									<h3>Michael Stenman</h3>
 									<p class="common-BodyText">Besiktningsman</p>
 									<a href="mailto:michael.stenman@besiktningsman.se">
@@ -668,10 +654,10 @@
 									</a>
 								</li>
 								<li class="col-3-12">
-									<h3>Patrik Svensson</h3>
+									<h3>Patrik Johansen</h3>
 									<p class="common-BodyText">Besiktningsman</p>
-									<a href="mailto:patrik.svensson@besiktningsman.se">
-										<p class="common-Link">patrik.svensson@besiktningsman.se</p>
+									<a href="mailto:patrik.johansen@besiktningsman.se">
+										<p class="common-Link">patrik.johansen@besiktningsman.se</p>
 									</a>
 								</li>
 								<li class="col-3-12">
